added cors to script module

--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
 
     </body>
     
-    <script type="module">
+    <script crossorigin="use-credentials" type="module">
      import { klangraumConnect } from './libs/klangraum_client.js'; /* Output audio connections */
      import { ws2osc } from './libs/ws2osc_client.js'; /* Osc communication */
      import { playAudio } from './libs/wsplayer.js'; /* Input audio connection */
